@@ -9,13 +9,12 @@
                         lvalues="30102|30103"
                         default="0" />
 
-                <!-- Episodes per Page
-                @TODO: This is commented out until the setting actually works.
+                <!-- Episodes per Page -->
                 <setting id="episodes_per_page"
                         type="slider"
                         label="30104"
                         default="25"
-                        range="5,5,200"
-                        option="int" /> -->
+                        range="5,5,100"
+                        option="int" />
         </category>
 </settings>
