@@ -1,3 +1,6 @@
+[B]Version 2.8.x[/B]
+- #5 Episodes per page is now a setting
+
 [B]Version 2.8.1[/B]
 - #4 FauxShow: Use JupiterBroadcasting.com feeds
 - #2 Pagination
